--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
     <div class="header">
-        <img src="DCADE548-B5A5-4EF5-A8CA-565CD6C3EEF7.jpeg" alt="CandyFlowers">
+        <img src="https://github.com/dario-armtz/CandyFlowers/blob/edf218dd5a090576cfaf9fdd6efd00e2a2489eee/DCADE548-B5A5-4EF5-A8CA-565CD6C3EEF7.jpeg" alt="CandyFlowers">
         <h1>Bienvenido a CandyFlowers</h1>
         <p>Las mejores flores de gomitas en UPAEP</p>
     </div>
