--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h2>Flor de Gomitas</h2>
             <p>Deliciosas flores hechas con gomitas de alta calidad.</p>
             <p class="price">$8 c/u o 2 x $15</p>
-            <img src="https://ejemplo.com/gomitas.jpg" alt="Flor de Gomitas">
+            <img src="https://github.com/dario-armtz/CandyFlowers/blob/7692c57552b46a7d1edfe0e9c355efec2ed68a1b/Centros%20de%20flores%20de%20chuches.jpg" alt="Flor de Gomitas">
             <button>Ordenar ahora</button>
         </div>
     </div>
