--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <h2>Clientes Satisfechos</h2>
     <div class="carousel">
         <img src="https://github.com/dario-armtz/CandyFlowers/blob/65c7cfdbcedffcd51cc43fee95cbc811127585a8/12595a3b-a9fe-4b5d-bd36-2bc9d504503d.jpg" alt="Cliente feliz con sus gomitas" class="active">
-        <img src="https://ejemplo.com/cliente2.jpg" alt="Cliente disfrutando de CandyFlowers">
+        <img src="https://github.com/dario-armtz/CandyFlowers/blob/89034b599ebb4f33ac1b72099dcb90e04f525093/9817d7a4-44a4-4f47-8205-8ac485a49afc.jpg" alt="Cliente aprueba CandyFlowers">
         <img src="https://ejemplo.com/cliente3.jpg" alt="Gomitas en evento especial">
     </div>
 
