--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="carousel">
         <img src="https://github.com/dario-armtz/CandyFlowers/blob/65c7cfdbcedffcd51cc43fee95cbc811127585a8/12595a3b-a9fe-4b5d-bd36-2bc9d504503d.jpg" alt="Cliente feliz con sus gomitas" class="active">
         <img src="https://github.com/dario-armtz/CandyFlowers/blob/89034b599ebb4f33ac1b72099dcb90e04f525093/9817d7a4-44a4-4f47-8205-8ac485a49afc.jpg" alt="Cliente aprueba CandyFlowers">
-        <img src="<blockquote class="imgur-embed-pub" lang="en" data-id="F1rjsUw"><a href="https://imgur.com/F1rjsUw">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>" alt="Cliente no puede dejar de comprar gomitas de CandyFlowers ">
+        <img src="//s.imgur.com/min/embed.js" alt="Cliente no puede dejar de comprar gomitas de CandyFlowers ">
     </div>
 
     <div class="footer">
