--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
 
     <div class="header">
-        <img src="https://github.com/dario-armtz/CandyFlowers/blob/813bab7ffd492b1f08d7f5f71d7815eb4fb07349/DCADE548-B5A5-4EF5-A8CA-565CD6C3EEF7.jpeg" alt="CandyFlowers">
+        <img src="https://imgur.com/14b683fb-e73b-4d76-8283-5ae3b9319b34" alt="CandyFlowers">
         <h1>Bienvenido a CandyFlowers</h1>
         <p>Las mejores flores de gomitas en UPAEP</p>
     </div>
@@ -105,16 +105,16 @@
             <h2>Flor de Gomitas</h2>
             <p>Deliciosas flores hechas con gomitas de alta calidad.</p>
             <p class="price">$8 c/u o 2 x $15</p>
-            <img src="https://github.com/dario-armtz/CandyFlowers/blob/7692c57552b46a7d1edfe0e9c355efec2ed68a1b/Centros%20de%20flores%20de%20chuches.jpg" alt="Flor de Gomitas">
+            <img src="https://i.imgur.com/uTcnhD2.jpeg" alt="Flor de Gomitas">
             <button>Ordenar ahora</button>
         </div>
     </div>
 
     <h2>Clientes Satisfechos</h2>
     <div class="carousel">
-        <img src="https://github.com/dario-armtz/CandyFlowers/blob/65c7cfdbcedffcd51cc43fee95cbc811127585a8/12595a3b-a9fe-4b5d-bd36-2bc9d504503d.jpg" alt="Cliente feliz con sus gomitas" class="active">
-        <img src="https://github.com/dario-armtz/CandyFlowers/blob/89034b599ebb4f33ac1b72099dcb90e04f525093/9817d7a4-44a4-4f47-8205-8ac485a49afc.jpg" alt="Cliente aprueba CandyFlowers">
-        <img src="//s.imgur.com/min/embed.js" alt="Cliente no puede dejar de comprar gomitas de CandyFlowers ">
+        <img src="https://i.imgur.com/DTOCnaZ.jpeg" alt="Cliente feliz con sus gomitas" class="active">
+        <img src="https://i.imgur.com/F7NYKBL.jpeg" alt="Cliente aprueba CandyFlowers">
+        <img src="https://i.imgur.com/F1rjsUw.jpeg" alt="Cliente no puede dejar de comprar gomitas de CandyFlowers ">
     </div>
 
     <div class="footer">
