--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
 
     <div class="header">
-        <img src="https://imgur.com/14b683fb-e73b-4d76-8283-5ae3b9319b34" alt="CandyFlowers">
+        <img src="blob:https://imgur.com/5bc520ba-dc73-4f06-8f95-8ba8fb81a33a" alt="CandyFlowers">
         <h1>Bienvenido a CandyFlowers</h1>
         <p>Las mejores flores de gomitas en UPAEP</p>
     </div>
