--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
 
     <div class="header">
-        <img src="blob:https://imgur.com/5bc520ba-dc73-4f06-8f95-8ba8fb81a33a" alt="CandyFlowers">
+        <img src="https://i.imgur.com/KvzYZfO.jpeg" alt="CandyFlowers">
         <h1>Bienvenido a CandyFlowers</h1>
         <p>Las mejores flores de gomitas en UPAEP</p>
     </div>
